{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 23,
  "lineage": "eca7747a-8825-77ce-bf32-d2fc2081221a",
  "resources": [
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0542b0b783d5f7139",
            "domain": "vpc",
            "id": "eipalloc-0542b0b783d5f7139",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-120-2.compute-1.amazonaws.com",
            "public_ip": "3.225.120.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_vpc_practise-us-east-1a"
            },
            "tags_all": {
              "Name": "my_vpc_practise-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:internet-gateway/igw-0f5fb88c295a50255",
            "id": "igw-0f5fb88c295a50255",
            "owner_id": "140687771725",
            "tags": {
              "Name": "my_vpc_practise"
            },
            "tags_all": {
              "Name": "my_vpc_practise"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0542b0b783d5f7139",
            "connectivity_type": "public",
            "id": "nat-00016f48578da7199",
            "network_interface_id": "eni-0d2a50b59116fb50c",
            "private_ip": "10.0.101.52",
            "public_ip": "3.225.120.2",
            "subnet_id": "subnet-00fdc0350309cf2b0",
            "tags": {
              "Name": "my_vpc_practise-us-east-1a"
            },
            "tags_all": {
              "Name": "my_vpc_practise-us-east-1a"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03bfd53a28a2b0f491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00016f48578da7199",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03bfd53a28a2b0f49",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5fb88c295a50255",
            "id": "r-rtb-0ce885b58ed52cbe71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce885b58ed52cbe7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-0f754b0322c041107",
            "id": "rtb-0f754b0322c041107",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_vpc_practise-db"
            },
            "tags_all": {
              "Name": "my_vpc_practise-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-099879ca5df660589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-03bfd53a28a2b0f49",
            "id": "rtb-03bfd53a28a2b0f49",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_vpc_practise-private"
            },
            "tags_all": {
              "Name": "my_vpc_practise-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-099879ca5df660589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:route-table/rtb-0ce885b58ed52cbe7",
            "id": "rtb-0ce885b58ed52cbe7",
            "owner_id": "140687771725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_vpc_practise-public"
            },
            "tags_all": {
              "Name": "my_vpc_practise-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-099879ca5df660589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ffd5d0144f6604b",
            "route_table_id": "rtb-0f754b0322c041107",
            "subnet_id": "subnet-024d86a8819b81555"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.database",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.database",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d0ac195966c4c01",
            "route_table_id": "rtb-0f754b0322c041107",
            "subnet_id": "subnet-062fb6f6df236edac"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.database",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.database",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8174be174b1b7b",
            "route_table_id": "rtb-03bfd53a28a2b0f49",
            "subnet_id": "subnet-0935c418c11513b9c"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8d16c6da706cfa4",
            "route_table_id": "rtb-03bfd53a28a2b0f49",
            "subnet_id": "subnet-06d6940d8b2a93772"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f34806f3f843fd3",
            "route_table_id": "rtb-0ce885b58ed52cbe7",
            "subnet_id": "subnet-00fdc0350309cf2b0"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1bd36f8b9994a4",
            "route_table_id": "rtb-0ce885b58ed52cbe7",
            "subnet_id": "subnet-0211cad967acb8456"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-024d86a8819b81555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024d86a8819b81555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-062fb6f6df236edac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062fb6f6df236edac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0935c418c11513b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0935c418c11513b9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-06d6940d8b2a93772",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d6940d8b2a93772",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-00fdc0350309cf2b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fdc0350309cf2b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:subnet/subnet-0211cad967acb8456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0211cad967acb8456",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140687771725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-099879ca5df660589"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140687771725:vpc/vpc-099879ca5df660589",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039ae922ad561af90",
            "default_route_table_id": "rtb-0702261e3545f175e",
            "default_security_group_id": "sg-03519978edfea1544",
            "dhcp_options_id": "dopt-06938e4f834226f5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-099879ca5df660589",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0702261e3545f175e",
            "owner_id": "140687771725",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          }
        }
      ]
    }
  ]
}